// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SCAStatusSwitch renders as disallowed when disallowed is passed as scaStatus 1`] = `
<div>
  <p>
    N/A
  </p>
</div>
`;

exports[`SCAStatusSwitch renders successfully as disabled when success is returned across 1`] = `
<div>
  <label
    class="pf-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-2"
    data-ouia-component-type="PF4/Switch"
    data-ouia-safe="true"
    for="pf-1621020051536wjijljk1ul"
  >
    <input
      aria-label="SCA Status for this Manifest is disabled"
      class="pf-c-switch__input"
      data-testid="sca-status-switch"
      id="pf-1621020051536wjijljk1ul"
      type="checkbox"
    />
    <span
      class="pf-c-switch__toggle"
    />
    <span
      aria-hidden="true"
      class="pf-c-switch__label pf-m-on"
    >
      Enabled
    </span>
    <span
      aria-hidden="true"
      class="pf-c-switch__label pf-m-off"
    >
      Disabled
    </span>
  </label>
</div>
`;

exports[`SCAStatusSwitch renders successfully as enabled when success is returned across 1`] = `
<div>
  <label
    class="pf-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-1"
    data-ouia-component-type="PF4/Switch"
    data-ouia-safe="true"
    for="pf-1621020051521x9tx0yls87"
  >
    <input
      aria-label="SCA Status for this Manifest is enabled"
      checked=""
      class="pf-c-switch__input"
      data-testid="sca-status-switch"
      id="pf-1621020051521x9tx0yls87"
      type="checkbox"
    />
    <span
      class="pf-c-switch__toggle"
    />
    <span
      aria-hidden="true"
      class="pf-c-switch__label pf-m-on"
    >
      Enabled
    </span>
    <span
      aria-hidden="true"
      class="pf-c-switch__label pf-m-off"
    >
      Disabled
    </span>
  </label>
</div>
`;

exports[`SCAStatusSwitch renders with a spinner when loading 1`] = `
<div>
  <span
    aria-valuetext="Loading..."
    class="pf-c-spinner pf-m-lg sca-status-spinner"
    role="progressbar"
  >
    <span
      class="pf-c-spinner__clipper"
    />
    <span
      class="pf-c-spinner__lead-ball"
    />
    <span
      class="pf-c-spinner__tail-ball"
    />
  </span>
</div>
`;

exports[`SCAStatusSwitch renders with an error message when an error occurs 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="sca-status-error-icon"
    fill="var(--pf-global--danger-color--100)"
    height="1em"
    role="img"
    style="vertical-align: -0.125em;"
    viewBox="0 0 512 512"
    width="1em"
  >
    <path
      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    />
  </svg>
  <span
    class="sca-status-error-msg"
  >
    Something went wrong. Please refresh the page and try again.
  </span>
</div>
`;

exports[`SCAStatusSwitch renders with an error message when the API response does not have 200 status and no data is returned 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="sca-status-error-icon"
    fill="var(--pf-global--danger-color--100)"
    height="1em"
    role="img"
    style="vertical-align: -0.125em;"
    viewBox="0 0 512 512"
    width="1em"
  >
    <path
      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    />
  </svg>
  <span
    class="sca-status-error-msg"
  >
    Something went wrong. Please refresh the page and try again.
  </span>
</div>
`;
